--- a/src/styles/layout/landing/_main.scss
+++ b/src/styles/layout/landing/_main.scss
@@ -1,4 +1,5 @@
 .main__container {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,16 +10,17 @@
   .main__logo {
     width: 250px;
     height: 63px;
-    margin: 125px 0 35px 0;
+    margin: 100px 0 50px 0;
     @media all and (min-width: 768px) {
       width: 419px;
       height: 105px;
-      margin: 350px 0 35px 0;
+      margin: 100px 0 35px 0;
     }
   }
 
   .main__title {
     font-family: var(--Merriweather);
+    margin-bottom: 30px;
     font-size: 19px;
     color: var(--dull-orange);
     text-align: center;
@@ -32,10 +34,10 @@
     font-size: 12px;
     color: var(--dark-green-blue);
     padding-bottom: 10px;
-    margin: 0px 100px 0px 100px;
+    margin: 0px 100px 20px 100px;
     @media all and (min-width: 768px) {
       font-size: 16px;
-      margin: 0px 200px 0px 200px;
+      margin: 0px 200px 20px 200px;
     }
   }
 
@@ -64,13 +66,13 @@
     }
 
     .main__article-image {
-      width: 32px;
-      height: 26px;
+      width: 38px;
+      height: 36px;
     }
 
     .main__article-text {
       font-family: var(--OpenSansRegular);
-      font-size: 12px;
+      font-size: 17px;
       color: var(--gunmetal);
     }
   }
@@ -78,7 +80,7 @@
   .main__link {
     width: 129px;
     height: 42px;
-    margin: 38px;
+    margin-top: 60px;
     padding: 10px 20px;
     border-radius: 21px;
     background-color: var(--dirty-blue);
@@ -86,7 +88,7 @@
       background-color: var(--dull-orange);
     }
     @media all and (min-width: 768px) {
-      margin-bottom: 60px;
+      margin-top: -125px;
     }
   }
 
@@ -98,6 +100,6 @@
     text-transform: uppercase;
     text-decoration: none;
     text-align: center;
-    vertical-align: middle;
+    // vertical-align: middle;
   }
 }
