--- a/version-0/src/scss/layout/createcard/mainstyles/_section1.scss
+++ b/version-0/src/scss/layout/createcard/mainstyles/_section1.scss
@@ -39,7 +39,7 @@
       cursor: pointer;
     }
     &__image {
-      background: url(../images/mariposa.jpg);
+      background: url(../images/images.jpg);
       width: 100%;
       height: 200px;
       background-color: $pale-grey;
